<resources>
  <string name="app_name">Positive Note</string>

  <!-- Home Activity Strings -->
  <string name="start_chat_button">Start Chat!</string>
  <string name="recent_notes_label">Your Recent Positive Notes!:</string>
  <string name="welcome_init_message">Welcome to Positive Note!</string>
  <string name="welcome_init_user_message">Welcome to Positive Note, </string>
  <string name="welcome_back_user_message">Welcome back, </string>

  <!-- Profile Activity -->
  <string name="action_profile">Profile Page</string>
  <string name="profile_about_me">About Me</string>
  <string name="action_settings">Settings</string>
  <string name="private_radio_button">Private</string>
  <string name="public_radio_button">Public</string>
  <string name="user_bio_default">No bio yet? No problem, go to settings whenever you\'d like to set one!</string>

  <!-- Tab Activity -->
  <string name="recent_chats_tab">Recent Chats</string>
  <string name="therapy_page">https://findtreatment.samhsa.gov/</string>
  <string name="filler_profile_pic">https://bit.ly/2MMyebl</string>
  <string name="find_users">Find a Helping Hand</string>
  <string name="update_button">Update</string>
  <string name="find_other_users">Find other users!</string>
  <string name="action_menu_chat_delete">Delete Selected Chat</string>

  <!-- Chat Activity -->
  <string name="message_hint">Say hello!</string>
  <string name="send_button_url">https://bit.ly/2KVWxkI</string>
  <string name="starred_message_url">https://bit.ly/2xDs1qK</string>
  <string name="profile_image_desc">User Profile Picture</string>

  <!-- Find Users Activity -->
  <string name="change_privacy_settings_hint">Change Privacy Settings to let other users find you too!</string>

  <!-- Login Strings -->
  <string name="login_button">Login</string>
  <string name="logout_button">Logout</string>

  <!-- User Settings -->
  <string name="forgot_pass_button">Forgot your password?</string>
  <string name="confirm_button">Confirm?</string>
  <string name="create_new_button">Create a new account?</string>
  <string name="create_new_account">Create a New Account!</string>
  <string name="update_account_info">Update User Bio?</string>
  <string name="username_hint">Enter your username</string>
  <string name="user_email_hint">Enter your user email</string>
  <string name="password_hint">Enter your password</string>
  <string name="password_hint_2">Enter a new password</string>
  <string name="user_bio_prompt">Enter a new bio if you\'d like!</string>
  <string name="help_question">Would you like a helping hand or to help?</string>
  <string name="yes_help">I\'d love to help!</string>
  <string name="no_help">I could use a helping hand today</string>
  <string name="yes_help_text">What would you like to help with?</string>
  <string name="no_help_text">What would you like help with?</string>
  <string name="feeling_blue">Feeling blue</string>
  <string name="relationships">Relationships</string>
  <string name="looks_check">Personal appearance or self esteem</string>
  <string name="emotional_check">Emotions feel out of control</string>
  <string name="self_check">Feeling out of control physically</string>
  <string name="disclaimer">You can always change these settings later in your profile</string>

  <!-- Custom Login Screen Activity -->
  <string name="try_again">Invalid username/password. Try again.</string>
  <string name="new_password">Enter a new password with email above</string>
  <string name="no_username">Input your email above</string>

  <!-- InMessage Activity -->
  <string name="send_button_image_desc">Send Message Arrow Button</string>
  <string name="action_menu_favorite">Favorite Selected Message as new Positive Note</string>

</resources>
