<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBFF8C"
    android:orientation="vertical"
    tools:context=".ActivityCreateAccount">

  <include layout="@layout/app_toolbar" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/newUserEmailET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="email"
        android:hint="@string/user_email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/newUserEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/newUserNameET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/newUserNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/newPasswordET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password_hint_2"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/newPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

  </LinearLayout>

  <TextView
      android:id="@+id/newHelpQuestionTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/help_question"
      android:textColor="#000000"
      android:textSize="18sp"
      android:textStyle="bold" />

  <RadioGroup
      android:id="@+id/newHelperRadioGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="10dp">

    <RadioButton
        android:id="@+id/newGiveHelpRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_help"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/newReceiveHelpRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_help"
        android:textSize="18sp"
        android:textStyle="bold" />
  </RadioGroup>

  <TextView
      android:id="@+id/newHelpOrHelpedTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:textColor="#000000"
      android:textSize="20sp"
      android:textStyle="bold" />

  <CheckBox
      android:id="@+id/newFeelingBlueCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/feeling_blue"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/newEmotionalCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/emotional_check"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/newLooksCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/looks_check"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/newRelationshipCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/relationships"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/newSelfCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/self_check"
      android:textColor="#000000"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/newUserBioET"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:maxHeight="150dp"
      android:layout_gravity="center"
      android:hint="@string/user_bio_prompt" />

  <Button
      android:id="@+id/finalizeNewAccountButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:backgroundTint="@color/button_background"
      android:text="@string/create_new_account"
      android:textColor="@android:color/white"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/disclaimerTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/disclaimer"
      android:textSize="14sp"
      android:textColor="#000000" />

</LinearLayout>
