<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settingsActivity"
    android:background="#CBFF8C">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/settings_toolbar"
        android:background="#00CCAA"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/updateUserNameET"
        android:hint="@string/username_hint_2"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/updatePasswordET"
        android:hint="@string/password_hint_2"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpQuestionTextView"
        android:text="@string/help_question"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helperRadioGroup"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helperRadioButton"
            android:text="@string/yes_help"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helpedRadioButton"
            android:text="@string/no_help"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpOrHelpedTextView"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingBlueCheck"
        android:text="@string/feeling_blue"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="30sp"
        android:onClick="onCheckBoxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relationshipCheck"
        android:text="@string/relationships"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="30sp"
        android:onClick="onCheckBoxClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/looksCheck"
        android:text="@string/looks_check"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="30sp"
        android:onClick="onCheckBoxClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emotionalCheck"
        android:text="@string/emotional_check"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="30sp"
        android:onClick="onCheckBoxClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selfCheck"
        android:text="@string/self_check"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="30sp"
        android:onClick="onCheckBoxClicked"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/userBioEditText"
        android:layout_gravity="center"
        android:hint="@string/user_bio"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/updateButton"
        android:text="@string/update_account_info"
        android:backgroundTint="#88CCF1"
        android:layout_gravity="center"/>


</LinearLayout>
