<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBFF8C"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="10dp">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:hint="@string/username_hint"
        android:minWidth="300dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password_hint"
        android:minWidth="300dp"
        android:inputType="textPassword" />


  </LinearLayout>

  <Button
      android:id="@+id/loginButton"
      android:layout_width="205dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:backgroundTint="@color/appColorPrimary"
      android:text="@string/login_button"
      android:textColor="@android:color/white"/>

  <Button
      android:id="@+id/createNewButton"
      android:layout_width="205dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:backgroundTint="@color/appColorPrimary"
      android:text="@string/create_new_button"
      android:textColor="@android:color/white"/>

  <Button
      android:id="@+id/forgotPassButton"
      android:layout_width="205dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:backgroundTint="@color/appColorPrimary"
      android:text="@string/forgot_pass_button"
      android:textColor="@android:color/white"/>

</LinearLayout>