<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBFF8C"
    android:orientation="vertical"
    tools:context=".ActivityUserSettings">

  <include layout="@layout/app_toolbar" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/updateUserEmailET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="email"
        android:hint="@string/user_email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/updateUserEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/updateUserNameET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/updateUserNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:orientation="horizontal"
      android:layout_marginBottom="10dp">

    <EditText
        android:id="@+id/updatePasswordET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password_hint_2"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

  </LinearLayout>

  <TextView
      android:id="@+id/helpQuestionTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/help_question"
      android:textColor="#000000"
      android:textSize="18sp"
      android:textStyle="bold" />

  <RadioGroup
      android:id="@+id/helperRadioGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="10dp">

    <RadioButton
        android:id="@+id/giveHelpRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/yes_help"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/receiveHelpRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/no_help"
        android:textSize="18sp"
        android:textStyle="bold" />
  </RadioGroup>

  <TextView
      android:id="@+id/helpOrHelpedTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:textColor="#000000"
      android:textSize="20sp"
      android:textStyle="bold" />

  <CheckBox
      android:id="@+id/feelingBlueCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/feeling_blue"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/emotionalCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/emotional_check"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/looksCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/looks_check"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/relationshipCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/relationships"
      android:textColor="#000000"
      android:textSize="18sp" />

  <CheckBox
      android:id="@+id/selfCheck"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30sp"
      android:onClick="onCheckBoxClicked"
      android:text="@string/self_check"
      android:textColor="#000000"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/updateUserBioET"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:hint="@string/user_bio_prompt" />

  <Button
      android:id="@+id/updateUserBioButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:backgroundTint="@color/button_background"
      android:text="@string/update_account_info"
      android:textColor="@android:color/white"
      android:textStyle="bold" />

</LinearLayout>
