<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBFF8C"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/userProfileImageView"
          android:layout_width="175dp"
          android:layout_height="175dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:contentDescription="@string/profile_image_desc"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <RadioGroup
            android:id="@+id/privateCheckRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp">

          <RadioButton
              android:id="@+id/privateRadioButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/private_radio_button"
              android:textSize="20sp"
              android:textStyle="bold" />

          <RadioButton
              android:id="@+id/publicRadioButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/public_radio_button"
              android:textSize="20sp"
              android:textStyle="bold" />

        </RadioGroup>

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

      </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/userProfileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userBioDescTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_about_me"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userBioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:minLines="1"
        android:text=""
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="#00DDAA"
        android:text="@string/logout_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

  </LinearLayout>

  <include layout="@layout/app_progressbar" />

</RelativeLayout>